# fast-trap

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: workflow.yml
fast-trap/: Cargo.toml
fast-trap/src/: entire.rs  fast.rs  hal.rs  lib.rs
fast-trap/src/hal/: mod.rs  riscv.rs  riscv32_trap.rs  riscv64_trap.rs  riscv_m.rs  riscv_s.rs
src/: entire.rs  fast.rs  lib.rs
test-app/: Cargo.toml  build.rs
test-app/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
