[package]
name = "test-app"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbi-rt = { version = "0.0.2", features = ["legacy"] }
riscv = "0.9.0"

console = { git = "https://github.com/YdrMaster/rCore-Tutorial-in-single-workspace" }

fast-trap = { path = "../fast-trap" }
