[package]
name = "test-app"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
m-mode = ["fast-trap/riscv-m"]
s-mode = ["fast-trap/riscv-s"]

[dependencies]
riscv = "0.9.0"
uart_16550 = "0.2"
rcore-console = "0.0.0"
r0 = "1"

fast-trap = { path = "../fast-trap" }
