[package]
name = "test-app"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
m-mode = ["fast-trap/riscv-m"]
s-mode = ["fast-trap/riscv-s"]

[dependencies]
r0 = "1"
riscv = "0.9.0"
uart_16550 = "0.2"
rcore-console = "0.0.0"
dtb-walker = "=0.2.0-alpha.3"

sifive-test-device = { git = "https://github.com/YdrMaster/sifive-test-device" }
fast-trap = { path = "../fast-trap" }
